feat: implemented GET endpoint to retrieve all cards belonging to a user email
